feature：工具优化